--- a/assets/styles/base.scss
+++ b/assets/styles/base.scss
@@ -181,7 +181,7 @@ blockquote {
 article {
   & > h1 {
     margin-top: 2em;
-    font-size: 2em;
+    font-size: 1.1em;
   }
 
   & > .meta {
@@ -254,6 +254,7 @@ sup > a {
 
 #page-title {
   margin: 0;
+  padding-right: .3em;
   & > a {
     font-family: var(--font-header);
   }
