--- a/layouts/partials/date-fmt.html
+++ b/layouts/partials/date-fmt.html
@@ -1,7 +1,7 @@
-{{if .Date}}
-{{.Date.Format "Jan 2, 2006"}}
+{{if .PublishDate}}
+{{.PublishDate.Format "2006-01-02"}}
 {{else if .Lastmod}}
-{{.Lastmod.Format "Jan 2, 2006"}}
+{{.Lastmod.Format "2006-01-02"}}
 {{else}}
 Unknown
 {{end}}
