fix up search and list page and some giscus issues (not complete yet), modify about
Signed-off-by: ryanwwest <ryan@ryanwwest.com>

--- a/assets/styles/base.scss
+++ b/assets/styles/base.scss
@@ -227,16 +227,16 @@ article {
 
   & > li {
     display: inline-block;
-    margin: 0.4em 0.2em;
+    margin: 0.2em 0.2em;
   }
 
   & > li > a {
     border-radius: 8px;
     border: var(--outlinegray) 1px solid;
-    padding: 0.2em 0.5em;
+    padding: 0.2em 0.2em;
     &::before {
       content: "#";
-      margin-right: 0.3em;
+      margin-right: 0.2em;
       color: var(--outlinegray);
     }
   }
@@ -374,6 +374,19 @@ header {
   }
 
   #search-icon {
+    // background-color: var(--lightgray);
+    border-radius: 4px;
+    height: 2em;
+    display: flex;
+    align-items: center;
+    cursor: pointer;
+    & > p {
+      display: inline;
+      padding: 0 1.5em 0 2em;
+    }
+  }
+
+  #other-icon {
     background-color: var(--lightgray);
     border-radius: 4px;
     height: 2em;
@@ -508,7 +521,7 @@ header {
 
   & > .section {
     display: flex;
-    align-items: center;
+    align-items: left;
 
     @media all and (max-width: 600px) {
       & .tags {
@@ -536,6 +549,7 @@ header {
 
   & .meta {
     opacity: 0.6;
+    flex: 0 0 1em;
   }
 }
 
