--- a/layouts/partials/textprocessing.html
+++ b/layouts/partials/textprocessing.html
@@ -69,8 +69,8 @@
       {{$href := strings.TrimRight "/" $curpage.RelPermalink}}
       {{$link := printf "<a href=\"%s%s\" rel=\"noopener\" class=\"internal-link\" data-src=\"%s\">%s</a>" $href $block $href $display}}
       {{$content = replace $content . $link}}
-    <!-- If path to existing file -->
-    {{else if fileExists $relpath}}
+    <!-- If path to existing file OR rww edit if added image file in media/ matches-->
+    {{else if or (fileExists $relpath) (fileExists (printf "%s%s" "media/" $path))}}
       {{$splitpath := split $relpath "/"}}
       {{$dirname := first (sub (len $splitpath) 1) $splitpath | path.Join | urlize}}
       {{$basename := index (last 1 $splitpath) 0}}
@@ -78,7 +78,7 @@
       <!-- Embedded? -->
       {{if (hasPrefix . "!")}}
         {{$width := index $split 1}}
-        {{$link := printf "<img src=\"%s\" width=\"%s\" />" $href (default "auto" $width)}}
+        {{$link := printf "<img src=\"../media%s\" width=\"%s\" />" $href (default "auto" $width)}}
         {{$content = replace $content . $link}}
       {{else}}
         {{$link := printf "<a href=\"%s\" rel=\"noopener\" class=\"internal-link\">%s</a>" $href $display}}
