--- a/layouts/partials/textprocessing.html
+++ b/layouts/partials/textprocessing.html
@@ -84,9 +84,9 @@
         {{$link := printf "<a href=\"%s\" rel=\"noopener\" class=\"internal-link\">%s</a>" $href $display}}
         {{$content = replace $content . $link}}
       {{end}}
-    <!-- Broken path -->
+    <!-- Broken path - rww edited change <a> tag to <span> so it doesn't show up as any link unless looking for it in source -->
     {{else}}
-      {{$link := printf "<a class=\"internal-link broken\">%s</a>" $display}}
+      {{$link := printf "<span class=\"internal-link broken\">%s</span>" $display}}
       {{$content = replace $content . $link}}
     {{end}}
 
