optimize site for about page by hiding comments and other things; other comment/footer improvements
Signed-off-by: ryanwwest <ryan@ryanwwest.com>

--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -28,7 +28,10 @@
       {{partial "toc.html" .}}
       {{partial "textprocessing.html" . }}
     </article>
-    {{partial "giscus.html" .}}
+
+    {{ if not (eq .Title $.Site.Params.about_page_title) }}
+      {{partial "giscus.html" .}}
+    {{ end}}
     {{ partial "footer.html" .}}
 </div>
 </body>
