--- a/layouts/partials/date-fmt.html
+++ b/layouts/partials/date-fmt.html
@@ -3,5 +3,5 @@
 {{else if .Lastmod}}
 {{.Lastmod.Format "2006-01-02"}}
 {{else}}
-Unknown
+<!-- rww edit - I might prefer to not show a date like on my About page -->
 {{end}}
