--- a/layouts/partials/backlinks.html
+++ b/layouts/partials/backlinks.html
@@ -25,5 +25,5 @@
     {{- end -}}
 </ul>
     {{else}}
-    <p style="margin-block-start: 0; margin-block-end: 0;"><i>{{ i18n "no_backlinks" }}</i></p>
+    <p style="margin-block-start: 0; margin-block-end: 0; opacity: .7;"><i>{{ i18n "no_backlinks" }}</i></p>
     {{end}}
