--- a/layouts/partials/footerIndex.html
+++ b/layouts/partials/footerIndex.html
@@ -1,3 +1,4 @@
+<!-- this is for the root homepage -->
 {{if $.Site.Data.config.enableFooter}}
   {{if $.Site.Data.graphConfig.enableGlobalGraph}}
       <div class="page-end" id="footer">
@@ -10,9 +11,9 @@
   {{else}}
       <hr/>
       <div class="page-end" id="footer">
-        <div class="backlinks-container">
+        <!-- <div class="backlinks-container">
             {{partial "backlinks.html" .}}
-        </div>
+        </div> -->
         <!-- <div>
             {{partial "graph.html" .}}
         </div> -->
