change heading anchor hashtags to float left of the article, disappear unless hovered on and be unselectable when copying text
Signed-off-by: ryanwwest <ryan@ryanwwest.com>

--- a/assets/styles/base.scss
+++ b/assets/styles/base.scss
@@ -45,15 +45,21 @@ h1, h2, h3, h4, h5, h6, thead {
   padding: 2rem auto 1rem;
 
   &:hover > .hanchor {
-    color: var(--secondary);
+    // color: var(--secondary);
+    opacity: 0.8;
   }
 }
 
 .hanchor {
   font-family: var(--font-header);
-  opacity: 0.8;
-  transition: color 0.3s ease;
+  opacity: 0.0;
+  transition: opacity 0.2s ease;
   color: var(--dark);
+  position:relative;
+  left: -1em;
+  width: 0;
+  height: 0;
+  user-select: none;
 }
 
 p, ul, text, a, tr, td, li, ol, ul {
