--- a/layouts/_default/term.html
+++ b/layouts/_default/term.html
@@ -8,7 +8,7 @@
     <!-- Begin actual content -->
     {{partial "header.html" .}}
     <article>
-        <h1>{{ i18n "tag" }}: {{ .Title }}</h1>
+        <h1>{{ i18n "tag" }}: {{ .Title }} <small><a href="../">(View All Tags)</a></small></h1>
         {{with .Params.description}}
             <p>{{.}}</p>
         {{end}}
