--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -84,7 +84,7 @@
     const SEARCH_ENABLED = {{.Site.Data.config.search.enableSemanticSearch}}
     const LATEX_ENABLED = {{.Site.Data.config.enableLatex}}
     const PRODUCTION = {{ hugo.IsProduction }}
-    const BASE_URL = {{.Site.BaseURL}}
+    const BASE_URL = window.location.origin // {{.Site.BaseURL}}  Changed because Quartz doesn't actually support a BaseURL of '/' even though that's supported by Hugo. This is a hack for search result clicking to work.
     const fetchData = Promise.all([
           fetch("{{ $linkIndex.Permalink }}")
             .then(data => data.json())
@@ -104,7 +104,7 @@
       const render = () => {
       // NOTE: everything within this callback will be executed for every page navigation. This is a good place to put JavaScript that loads or modifies data on the page, adds event listeners, etc. If you are only dealing with basic DOM replacement, use the init function
 
-      const siteBaseURL = new URL(BASE_URL);
+      const siteBaseURL = new URL(window.location.origin); //new URL(BASE_URL);  Changed because Quartz doesn't actually support a BaseURL of '/' even though that's supported by Hugo. This is a hack for search result clicking to work.
       const pathBase = siteBaseURL.pathname;
       const pathWindow = window.location.pathname;
       const isHome = pathBase == pathWindow;
