--- a/assets/styles/custom.scss
+++ b/assets/styles/custom.scss
@@ -29,3 +29,16 @@
 
 
 
+// ryanwwest: Remove space between paragraphs and bullet points (see https://discourse.gohugo.io/t/remove-space-between-paragraph-and-immediately-following-list-item/47851/2)
+p:has(+ ul) {
+  margin-bottom: 0;
+}
+p + ul {
+  margin-top: 0;
+}
+p:has(+ ol) {
+  margin-bottom: 0;
+}
+p + ol {
+  margin-top: 0;
+}
